# structured-archive

./: CMakeLists.txt  LICENSE.md
structured-archive/: CMakeLists.txt  Test.cpp  Test.hpp  structured-archive.cpp  structured-archive.hpp
test/: CMakeLists.txt  Main.cpp  Test2.cpp
